--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -418,7 +418,7 @@
 
   "status": {
     "unverify": "Unverify",
-    "approved": "Approved", 
+    "approved": "Approved",
     "locked": "Locked"
   },
 
@@ -502,54 +502,55 @@
 
   "userProfile": {
     "title": "User Profile",
-         "fields": {
-           "userName": "User Name",
-           "email": "Email",
-           "phone": "Phone",
-           "idCode": "ID Code",
-           "walletAddress": "Wallet Address",
-           "isRegistered": "Is Registered",
-           "countPay": "Count Pay",
-           "tier": "Tier",
-           "buyPackage": "Buy Package",
-           "rank": "Rank",
-           "availableHewe": "Available HEWE",
-           "rewardHewe": "Reward HEWE",
-           "hewePerDay": "HEWE Per Day",
-           "availableUsdt": "Available USDT",
-           "processingUsdt": "Processing USDT",
-           "totalEarned": "Total Earned",
-           "totalHold": "Total Hold",
-           "outstandingPreTier2": "Outstanding Pre-Tier2 Pool Amount",
-           "payoutGateway": "Payout Gateway",
-           "payoutDisplayName": "Payout Display Name",
-           "payoutEmailOrPhone": "Payout Email or Phone Number",
-           "overdueReferral": "Overdue referral",
-           "fine": "Fine",
-           "level": "Level",
-           "note": "Note",
-           "changeCreatedAt": "Change Created At",
-           "dieTime": "Die Time",
-           "status": "Status",
-           "holdTier": "Hold Tier",
-           "holdLevel": "Hold Level",
-           "lockedTime": "Locked Time",
-           "deletedTime": "Deleted Time",
-           "memberSince": "Member Since",
-           "tier1Time": "Tier 1 Time",
-           "tier2Time": "Tier 2 Time",
-           "tier3Time": "Tier 3 Time",
-           "tier4Time": "Tier 4 Time",
-           "tier5Time": "Tier 5 Time",
-           "oldUserName": "Old User Name",
-           "oldEmail": "Old Email",
-           "changeDate": "Change Date",
-           "temporaryDie": "Temporary Die",
-           "activeId": "Active ID",
-           "numbersOfIdRequire": "Numbers of ID Require",
-           "branch1": "Branch 1",
-           "branch2": "Branch 2"
-         },
+    "fields": {
+      "userName": "User Name",
+      "email": "Email",
+      "phone": "Phone",
+      "idCode": "ID Code",
+      "walletAddress": "Wallet Address",
+      "isRegistered": "Is Registered",
+      "countPay": "Count Pay",
+      "tier": "Tier",
+      "buyPackage": "Buy Package",
+      "rank": "Rank",
+      "availableHewe": "Available HEWE",
+      "rewardHewe": "Reward HEWE",
+      "totalHewe": "Total HEWE",
+      "hewePerDay": "HEWE Per Day",
+      "availableUsdt": "Available USDT",
+      "processingUsdt": "Processing USDT",
+      "totalEarned": "Total Earned",
+      "totalHold": "Total Hold",
+      "outstandingPreTier2": "Outstanding Pre-Tier2 Pool Amount",
+      "payoutGateway": "Payout Gateway",
+      "payoutDisplayName": "Payout Display Name",
+      "payoutEmailOrPhone": "Payout Email or Phone Number",
+      "overdueReferral": "Overdue referral",
+      "fine": "Fine",
+      "level": "Level",
+      "note": "Note",
+      "changeCreatedAt": "Change Created At",
+      "dieTime": "Die Time",
+      "status": "Status",
+      "holdTier": "Hold Tier",
+      "holdLevel": "Hold Level",
+      "lockedTime": "Locked Time",
+      "deletedTime": "Deleted Time",
+      "memberSince": "Member Since",
+      "tier1Time": "Tier 1 Time",
+      "tier2Time": "Tier 2 Time",
+      "tier3Time": "Tier 3 Time",
+      "tier4Time": "Tier 4 Time",
+      "tier5Time": "Tier 5 Time",
+      "oldUserName": "Old User Name",
+      "oldEmail": "Old Email",
+      "changeDate": "Change Date",
+      "temporaryDie": "Temporary Die",
+      "activeId": "Active ID",
+      "numbersOfIdRequire": "Numbers of ID Require",
+      "branch1": "Branch 1",
+      "branch2": "Branch 2"
+    },
     "status": {
       "finished": "Finished",
       "unfinished": "Unfinished",
@@ -576,26 +577,26 @@
       "bonusRef": "Bonus Ref",
       "kycFee": "KYC Fee"
     },
-         "sections": {
-           "userInfo": "User Information",
-           "financialInfo": "Financial Information",
-           "referralInfo": "Referral Information",
-           "notEnoughChild": "Not Enough Child",
-           "numbersOfIdRequire": "Numbers of ID Require",
-           "refUserName": "Referral User Name",
-           "oldParent": "Old Parent",
-           "branch1": "Branch 1",
-           "branch2": "Branch 2",
-           "totalEarnedUsdt": "Total Earned USDT",
-           "totalEarnedHewe": "Total Earned HEWE",
-           "directReferralMembers": "Direct Referral Members",
-           "directReferralSubMembers": "Direct Referral Sub Members",
-           "tier2Users": "Tier 2 Users",
-           "referer": "Referer",
-           "missingUsers": "Missing Users",
-           "totalChild": "Total Child",
-           "subInfo": "Sub Information"
-         },
+    "sections": {
+      "userInfo": "User Information",
+      "financialInfo": "Financial Information",
+      "referralInfo": "Referral Information",
+      "notEnoughChild": "Not Enough Child",
+      "numbersOfIdRequire": "Numbers of ID Require",
+      "refUserName": "Referral User Name",
+      "oldParent": "Old Parent",
+      "branch1": "Branch 1",
+      "branch2": "Branch 2",
+      "totalEarnedUsdt": "Total Earned USDT",
+      "totalEarnedHewe": "Total Earned HEWE",
+      "directReferralMembers": "Direct Referral Members",
+      "directReferralSubMembers": "Direct Referral Sub Members",
+      "tier2Users": "Tier 2 Users",
+      "referer": "Referer",
+      "missingUsers": "Missing Users",
+      "totalChild": "Total Child",
+      "subInfo": "Sub Information"
+    },
     "modals": {
       "deleteConfirm": "Are you sure to do this?",
       "changeWalletConfirm": "Are you sure to do this",
