--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -511,7 +511,7 @@
 
   "status": {
     "unverify": "Chưa xác thực",
-    "approved": "Đã phê duyệt", 
+    "approved": "Đã phê duyệt",
     "locked": "Đã khóa"
   },
 
@@ -595,54 +595,56 @@
 
   "userProfile": {
     "title": "Hồ sơ người dùng",
-         "fields": {
-           "userName": "Tên người dùng",
-           "email": "Email",
-           "phone": "Số điện thoại",
-           "idCode": "Mã ID",
-           "walletAddress": "Địa chỉ ví",
-           "isRegistered": "Đã đăng ký",
-           "countPay": "Số lần thanh toán",
-           "tier": "Cấp độ",
-           "buyPackage": "Gói mua",
-           "rank": "Xếp hạng",
-           "availableHewe": "HEWE khả dụng",
-           "rewardHewe": "HEWE thưởng",
-           "hewePerDay": "HEWE mỗi ngày",
-           "availableUsdt": "USDT khả dụng",
-           "processingUsdt": "USDT đang xử lý",
-           "totalEarned": "Tổng thu nhập",
-           "totalHold": "Tổng giữ",
-           "outstandingPreTier2": "Số dư Pre-Tier2 Pool",
-           "payoutGateway": "Cổng thanh toán",
-           "payoutDisplayName": "Tên hiển thị thanh toán",
-           "payoutEmailOrPhone": "Email hoặc số điện thoại thanh toán",
-           "overdueReferral": "Giới thiệu quá hạn",
-           "fine": "Phạt",
-           "level": "Cấp",
-           "note": "Ghi chú",
-           "changeCreatedAt": "Ngày tạo thay đổi",
-           "dieTime": "Thời gian kết thúc",
-           "status": "Trạng thái",
-           "holdTier": "Giữ cấp độ",
-           "holdLevel": "Giữ cấp",
-           "lockedTime": "Thời gian khóa",
-           "deletedTime": "Thời gian xóa",
-           "memberSince": "Thành viên từ",
-           "tier1Time": "Thời gian Tier 1",
-           "tier2Time": "Thời gian Tier 2",
-           "tier3Time": "Thời gian Tier 3",
-           "tier4Time": "Thời gian Tier 4",
-           "tier5Time": "Thời gian Tier 5",
-           "oldUserName": "Tên người dùng cũ",
-           "oldEmail": "Email cũ",
-           "changeDate": "Ngày thay đổi",
-           "temporaryDie": "Tạm dừng",
-           "activeId": "ID Hoạt động",
-           "numbersOfIdRequire": "Số lượng ID yêu cầu",
-           "branch1": "Nhánh 1",
-           "branch2": "Nhánh 2"
-         },
+    "fields": {
+      "userName": "Tên người dùng",
+      "email": "Email",
+      "phone": "Số điện thoại",
+      "idCode": "Mã ID",
+      "walletAddress": "Địa chỉ ví",
+      "isRegistered": "Đã đăng ký",
+      "countPay": "Số lần thanh toán",
+      "tier": "Cấp độ",
+      "buyPackage": "Gói mua",
+      "rank": "Xếp hạng",
+      "availableHewe": "HEWE khả dụng",
+      "rewardHewe": "HEWE thưởng",
+      "totalHewe": "Tổng HEWE",
+      "claimedHewe": "HEWE đã nhận",
+      "hewePerDay": "HEWE mỗi ngày",
+      "availableUsdt": "USDT khả dụng",
+      "processingUsdt": "USDT đang xử lý",
+      "totalEarned": "Tổng thu nhập",
+      "totalHold": "Tổng giữ",
+      "outstandingPreTier2": "Số dư Pre-Tier2 Pool",
+      "payoutGateway": "Cổng thanh toán",
+      "payoutDisplayName": "Tên hiển thị thanh toán",
+      "payoutEmailOrPhone": "Email hoặc số điện thoại thanh toán",
+      "overdueReferral": "Giới thiệu quá hạn",
+      "fine": "Phạt",
+      "level": "Cấp",
+      "note": "Ghi chú",
+      "changeCreatedAt": "Ngày tạo thay đổi",
+      "dieTime": "Thời gian kết thúc",
+      "status": "Trạng thái",
+      "holdTier": "Giữ cấp độ",
+      "holdLevel": "Giữ cấp",
+      "lockedTime": "Thời gian khóa",
+      "deletedTime": "Thời gian xóa",
+      "memberSince": "Thành viên từ",
+      "tier1Time": "Thời gian Tier 1",
+      "tier2Time": "Thời gian Tier 2",
+      "tier3Time": "Thời gian Tier 3",
+      "tier4Time": "Thời gian Tier 4",
+      "tier5Time": "Thời gian Tier 5",
+      "oldUserName": "Tên người dùng cũ",
+      "oldEmail": "Email cũ",
+      "changeDate": "Ngày thay đổi",
+      "temporaryDie": "Tạm dừng",
+      "activeId": "ID Hoạt động",
+      "numbersOfIdRequire": "Số lượng ID yêu cầu",
+      "branch1": "Nhánh 1",
+      "branch2": "Nhánh 2"
+    },
     "status": {
       "finished": "Hoàn thành",
       "unfinished": "Chưa hoàn thành",
@@ -669,26 +671,26 @@
       "bonusRef": "Thưởng giới thiệu",
       "kycFee": "Phí KYC"
     },
-         "sections": {
-           "userInfo": "Thông tin người dùng",
-           "financialInfo": "Thông tin tài chính",
-           "referralInfo": "Thông tin giới thiệu",
-           "notEnoughChild": "Không đủ con",
-           "numbersOfIdRequire": "Số lượng ID yêu cầu",
-           "refUserName": "Tên người giới thiệu",
-           "oldParent": "Cha mẹ cũ",
-           "branch1": "Nhánh 1",
-           "branch2": "Nhánh 2",
-           "totalEarnedUsdt": "Tổng thu nhập USDT",
-           "totalEarnedHewe": "Tổng thu nhập HEWE",
-           "directReferralMembers": "Thành viên giới thiệu trực tiếp",
-           "directReferralSubMembers": "Thành viên phụ giới thiệu trực tiếp",
-           "tier2Users": "Người dùng Tier 2",
-           "referer": "Người giới thiệu",
-           "missingUsers": "Người dùng cần bù",
-           "totalChild": "Tổng số con",
-           "subInfo": "Thông tin phụ"
-         },
+    "sections": {
+      "userInfo": "Thông tin người dùng",
+      "financialInfo": "Thông tin tài chính",
+      "referralInfo": "Thông tin giới thiệu",
+      "notEnoughChild": "Không đủ con",
+      "numbersOfIdRequire": "Số lượng ID yêu cầu",
+      "refUserName": "Tên người giới thiệu",
+      "oldParent": "Cha mẹ cũ",
+      "branch1": "Nhánh 1",
+      "branch2": "Nhánh 2",
+      "totalEarnedUsdt": "Tổng thu nhập USDT",
+      "totalEarnedHewe": "Tổng thu nhập HEWE",
+      "directReferralMembers": "Thành viên giới thiệu trực tiếp",
+      "directReferralSubMembers": "Thành viên phụ giới thiệu trực tiếp",
+      "tier2Users": "Người dùng Tier 2",
+      "referer": "Người giới thiệu",
+      "missingUsers": "Người dùng cần bù",
+      "totalChild": "Tổng số con",
+      "subInfo": "Thông tin phụ"
+    },
     "modals": {
       "deleteConfirm": "Bạn có chắc chắn muốn thực hiện điều này?",
       "changeWalletConfirm": "Bạn có chắc chắn muốn thực hiện điều này",
@@ -704,6 +706,7 @@
       "walletFormatError": "Vui lòng nhập đúng định dạng ví",
       "tierRequired": "Cấp độ là bắt buộc",
       "availableHeweRequired": "HEWE khả dụng là bắt buộc",
+      "totalHeweRequired": "Tổng HEWE là bắt buộc",
       "availableUsdtRequired": "USDT khả dụng là bắt buộc",
       "fineRequired": "Phạt là bắt buộc",
       "levelRequired": "Cấp là bắt buộc"
