done fix new profile UI

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -1,5 +1,12 @@
 {
-  "register": "Register",
+  "emailOrUsername": "Email/User Name",
+  "emailOrUsernameRequired": "Email/User Name is required",
+  "passwordRequired": "Password is required",
+  "passwordPattern": "Password must contain at least 8 characters and a number",
+  "confirmPassword": "Confirm Password",
+  "confirmPasswordRequired": "Confirm password is required",
+  "passwordsDoNotMatch": "Your passwords do no match",
+  "alreadyHaveAccount": "Already have an account?",
   "login": "Login",
   "confirm": "Confirm",
   "invalidUrl": "Invalid url",
@@ -10,10 +17,8 @@
   "REJECTED": "Rejected",
   "LOCKED": "Locked",
   "profile": "Profile",
-  "payment": "Payment",
   "tree": "System",
   "transactions": "Transactions",
-  "status": "Status",
   "memberSince": "Member since",
   "walletAddress": "Wallet address",
   "fine": "Fine",
